# read-write-memory-rs

./: Cargo.toml  README.md
data/: syscall.json
examples/: read_example.rs  watch_proc_example.rs  write_example.rs
src/: lib.rs  main.rs
