[package]
name = "process-read-write"
version = "0.1.2"
authors = ["Squar3"]
edition = "2021"
description = "process-read-write allow you to read and write bytes from another processes, it also enables you to monitor a specefic process using ptrace, geting a real-time list a list of all the system calls made by that process."
repository = "https://github.com/FatSquare/read-write-memory-rs"
license = "GPL-3.0-or-later"
keywords = ["gamedev", "process" ,"read-memory","write-memory","game-hacking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.27.1", features = ["uio", "process", "term","ptrace"] }
serde_json = "1.0.111"
sysinfo = "0.30.5"
